	PR middle-end/54967 	* cfgloopmanip.c (fix_bb_placements): Add loop_closed_ssa_invalidated; 	track basic blocks that moved out of their loops. 	(unloop): Likewise. 	(remove_path): Update. 	(fix_loop_placements): Update. 	* tree-ssa-loop-ivcanon.c (try_unroll_loop_completely): Add 	loop_closed_ssa_invalidated parameter; pass it around. 	(canonicalize_loop_induction_variables): Update loop closed 	SSA form if needed. 	(tree_unroll_loops_completely): Likewise; do irred update out of 	the outer loop; verify that SSA form is closed. 	* cfgloop.h (unrloop): Update.

* gfortran.dg/pr54967.f90: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@192709 138bc75d-0d04-0410-961f-82ee72b054a4